attempt to fix hidden inputs on mobile browser

--- a/source/css/euclid-main.css
+++ b/source/css/euclid-main.css
@@ -209,8 +209,8 @@ footer { padding: 40px 0; }
 	<LABEL><SPAN>BLHHH</SPAN><INPUT></LABEL> */
 form {  font-size: 11px; font-weight: bold; text-transform: uppercase; }
 label, label .input-title, label input { height: 40px; vertical-align: middle; line-height: 40px; }
-label { display: block; background-color: #FFF;overflow: hidden; border-bottom: 1px solid #EDEDED; }
-label input { border-width: 0 0 0 1px; padding-left: 15px; border-left: 1px solid #EDEDED; }
+label { display: block; background-color: #FFF; border-bottom: 1px solid #EDEDED; }
+label input { border-width: 0; padding: 0 0 0 15px; margin: 0; height: 39px; border-left: 1px solid #EDEDED; }
 label input:focus { outline: none; }
 label > .input-title { border-left: 5px solid #CCC; padding-left: 10px; padding-right: 10px; display: inline-block; }
 label.required > .input-title { border-color: orange; }
